--- a/dom/template-v3.html
+++ b/dom/template-v3.html
@@ -11,6 +11,7 @@
     
     <div id="app">
         <p>{{titulo}}</p>
+        <p>{{saudacao()}}</p>
     </div>
 
     <script>
@@ -18,6 +19,11 @@
             el:'#app',
             data:{
                 titulo:'Usando VueJs!'
+            },
+            methods:{
+                saudacao(){
+                    return this.titulo
+                }
             }
         })
     </script>
